[gd_scene load_steps=11 format=3 uid="uid://cfopkhf7sbff3"]

[ext_resource type="Script" path="res://Enemies/robot_walking.gd" id="1_eje3d"]
[ext_resource type="Texture2D" uid="uid://dh8gs8g25ihqm" path="res://assets/images/enemies/robot_walking/Pixilart Sprite Sheet.png" id="1_ybuif"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okrrs"]
size = Vector2(14, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj8sj"]
atlas = ExtResource("1_ybuif")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpqfv"]
atlas = ExtResource("1_ybuif")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqil2"]
atlas = ExtResource("1_ybuif")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_68id6"]
atlas = ExtResource("1_ybuif")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp34l"]
atlas = ExtResource("1_ybuif")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1v46"]
atlas = ExtResource("1_ybuif")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_af6c3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj8sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpqfv")
}],
"loop": false,
"name": &"move",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqil2")
}],
"loop": false,
"name": &"return",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68id6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp34l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1v46")
}],
"loop": false,
"name": &"step",
"speed": 6.0
}]

[node name="RobotWalker" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 6
script = ExtResource("1_eje3d")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2.5)
scale = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_okrrs")

[node name="RobotSprites" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_af6c3")
animation = &"step"

[node name="leftFoot" type="RayCast2D" parent="."]
position = Vector2(-3, 0)
target_position = Vector2(0, 10)
collision_mask = 2

[node name="leftFace" type="RayCast2D" parent="."]
position = Vector2(0.5, 2.5)
target_position = Vector2(-8, 0)
collision_mask = 2

[node name="rightFoot" type="RayCast2D" parent="."]
position = Vector2(4, 0)
target_position = Vector2(0, 10)
collision_mask = 2

[node name="rightFace" type="RayCast2D" parent="."]
position = Vector2(0.5, 2.5)
target_position = Vector2(8, 0)
collision_mask = 2

[connection signal="animation_finished" from="RobotSprites" to="." method="_on_robot_sprites_animation_finished"]
